[package]
name = "asyncstd-sieve"
version = "0.1.0"
authors = ["LambdaKappaTheta <lambdakappatheta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.6.2", features = ["unstable"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
